# rustreexo-wasm

./: .gitignore  Cargo.toml  Makefile  NPM_PUBLISHING_GUIDE.md  README.md
.github/: README.md
.github/workflows/: benchmark.yml  build-artifacts.yml  ci.yml  pages.yml  release.yml  security.yml  typescript-tests.yml
examples/: basic_usage.js  browser_example.html  nodejs_example.js  package.json
src/: lib.rs  wasm_api.rs
tests/: wasm.rs
tests/typescript/: .eslintrc.js  package-lock.json  package.json  tsconfig.json
tests/typescript/src/: utreexo-nodejs.test.ts  utreexo-reference.test.ts
