[package]
name = "rustreexo-wasm"
version = "0.4.0"
authors = ["@AbdelStark"]
edition = "2021"
description = "WebAssembly bindings for Utreexo"
license = "MIT"
repository = "https://github.com/AbdelStark/rustreexo-wasm"
homepage = "https://github.com/AbdelStark/rustreexo-wasm"
rust-version = "1.63.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
rustreexo = { version = "0.4.0", features = ["with-serde"] }
wasm-bindgen = "0.2.78"
js-sys = "0.3.55"
wee_alloc = "0.4.5"
console_error_panic_hook = { version = "0.1.6", optional = true }
getrandom = { version = "0.2.3", features = ["js"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
once_cell = "=1.7.2"
bumpalo = "=3.4.0"

[dependencies.web-sys]
version = "0.3.55"
features = ["console", "Performance", "Window"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["console_error_panic_hook"]
